# terminal-state

./: .gitignore  .pre-commit-config.yaml  .tmuxp.yaml  DEVENV_SETUP.md  LICENSE  README.md  devenv.nix  devenv.yaml  flake.nix  pyproject.toml
examples/: README.md  asciinema_demo.py
src/terminal_state/: __init__.py
src/terminal_state/capture/: __init__.py  frame.py  recorder.py
src/terminal_state/export/: __init__.py  asciinema.py  gif.py  screenshot.py
src/terminal_state/input/: __init__.py  keys.py
src/terminal_state/models/: __init__.py  config.py
src/terminal_state/session/: __init__.py  backend.py  terminal.py
tests/: __init__.py  conftest.py  test_config.py  test_export.py  test_frame.py  test_keys.py  test_output.py  test_recording.py  test_session.py
tests/test_outputs/test_export_asciinema/: test.cast
